welcome.lessons.welcome.bat.bool1.Diff21.scala.error
sumDouble:5: error: type mismatch;
 found   : Unit
 required: Integer
    if (a==b) {
    ^