welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
  if (n<21) {
    return Maths.abs(21-n)
  } else {
    return 2 * Maths.abs(21-n)
  }
}